src/ui/radarr_ui/collections/snapshots/managarr__ui__radarr_ui__collections__collections_ui_tests__tests__snapshot_tests__edit_collection_modal_EditCollectionRootFolderPathInput_CollectionDetails.snap
---
source: src/ui/radarr_ui/collections/collections_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Collection ▼                         Number of Movies         Root Folder Path         Quality Profile          Search on Add             Monitored               
=> Test Collection                      1                        /nfs/movies              HD - 1080p               Yes                       🏷                       
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                    ╭  Test Collection  ───────────────────────────────────────────────────────────────────────────────────────────────────────╮                     
                    │Overview: Collection blah blah blah                                                                                       │                     
                    │Root Folder Path: /nfs/movies                                                                                             │                     
                    │Quality Profile: HD - 1080p                                                                                               │                     
                    │Minimum Avai╭───────────────────────────────────  Edit - Test Collection  ────────────────────────────────────╮           │                     
                    │Monitored: Y│                                    Collection blah blah blah                                    │           │                     
                    │Search on Ad│                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │  Movies  ──│                                                                                                 │───────────│                     
                    │   ✔  Title │                                               ╭───╮                                             │           │                     
                    │=> ✔  Test  │                                    Monitored: │ ✔ │                                             │           │                     
                    │            │                                               ╰───╯                                             │           │                     
                    │            │                                               ╭────────────────────────────────────────────╮    │           │                     
                    │            │                         Minimum Availability: │Announced                                 ▼ │    │           │                     
                    │            │                                               ╰────────────────────────────────────────────╯    │           │                     
                    │            │                                               ╭────────────────────────────────────────────╮    │           │                     
                    │            │                              Quality Profile: │HD - 1080p                                ▼ │    │           │                     
                    │            │                                               ╰────────────────────────────────────────────╯    │           │                     
                    │            │                                               ╭────────────────────────────────────────────╮    │           │                     
                    │            │                                  Root Folder: │/nfs/movies                                 │    │           │                     
                    │            │                                               ╰────────────────────────────────────────────╯    │           │                     
                    │            │                                               ╭───╮                                             │           │                     
                    │            │                                Search on Add: │ ✔ │                                             │           │                     
                    │            │                                               ╰───╯                                             │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │╭───────────────────────────────────────────────╮╭──────────────────────────────────────────────╮│           │                     
                    │            ││                     Save                      ││                    Cancel                    ││           │                     
                    │            │╰───────────────────────────────────────────────╯╰──────────────────────────────────────────────╯│           │                     
                    │            ╰─────────────────────────────────────────────────────────────────────────────────────────────────╯           │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
